--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       mysql:
         condition: service_healthy
     container_name: flask_api
+    environment:
+      - TESTE=TESTANDO
     networks:
       - challange_network
     ports:
