--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,11 @@ services:
       mysql:
         condition: service_healthy
     container_name: flask_api
+    tty: true
     environment:
-      - TESTE=TESTANDO
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     networks:
       - challange_network
     ports:
@@ -20,20 +23,25 @@ services:
     restart: always
     container_name: mysql
     environment:
-      - MYSQL_DATABASE=challange
-      - MYSQL_ROOT_PASSWORD=abcd1234
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      
     healthcheck:
-      test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
-      start_period: 5s
-      interval: 3s
-      timeout: 3s
-      retries: 3
+      test: mysqladmin ping --user=${MYSQL_USER} --password=${MYSQL_PASSWORD}
+      #test: mysql -u $MYSQL_USER -p$MYSQL_PASSWORD -e 'show databases'
+      start_period: 10s
+      interval: 5s
+      timeout: 5s
+      retries: 5
     networks:
       - challange_network
     ports:
       - "3306"
-    volumes:
-      - mysql:/var/lib/mysql
+    # Volumes comentados para banco não persistir, caso necessário, descomentar
+    #volumes:
+    #  - mysql:/var/lib/mysql
   proxy:
     image: nginx:stable-alpine
     container_name: proxy
@@ -41,7 +49,7 @@ services:
     depends_on:
       - app
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./.docker/proxy/nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
     - challange_network
     ports:
@@ -50,6 +58,7 @@ services:
 
 networks:
   challange_network:
+    driver: bridge
     ipam:
       config:
         - subnet: 172.28.0.0/24
