Changed the string size and menu time/options

--- a/.docker/proxy/nginx.conf
+++ b/.docker/proxy/nginx.conf
@@ -7,7 +7,7 @@ http {
         listen 80;
 
         location /paste {
-            proxy_pass http://app:5000/paste;
+            proxy_pass http://api:5000/paste;
         }
     }
 }
