--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
 version: '3.8'
 
 services:
-  app:
+  api:
     build:
       context: .
       dockerfile: ./.docker/python/Dockerfile
     depends_on:
       mysql:
         condition: service_healthy
-    container_name: flask_api
     # Avaliar o restart always devido a conexão com o banco falhar
     restart: always
     environment:
@@ -47,7 +46,7 @@ services:
     container_name: proxy
     restart: always
     depends_on:
-      - app
+      - api
     volumes:
       - ./.docker/proxy/nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
